# web-research-mcp

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
src/: __init__.py  web_search.py
tests/: __init__.py  test_web_search.py
