[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "web-research-mcp"
version = "1.0.0"
description = "Multi-provider web search MCP server eliminating native web search dependencies"
authors = [
    {name = "Cod.1 (Coder Agent)", email = "cod1@computerag.dev"},
]
dependencies = [
    "mcp",
    "httpx",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
